--- a/package.json
+++ b/package.json
@@ -37,23 +37,27 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
+    "@types/split2": "^2.1.6",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "express": "^4.16.3",
-    "express-pino-logger": "^3.0.2",
+    "express-pino-logger": "^4.0.0",
     "express-promise-router": "^3.0.3",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mobx": "^5.0.3",
-    "mobx-utils": "^5.0.0",
+    "mobx-utils": "^5.0.1",
     "module-alias": "^2.1.0",
     "moment": "^2.22.2",
     "mqtt": "^2.18.3",
     "pg": "^7.4.3",
-    "pino": "^4.17.6",
+    "pino": "^5.2.0",
+    "pump": "^3.0.0",
     "reflect-metadata": "^0.1.12",
     "serializr": "^1.3.0",
+    "split2": "^3.0.0",
+    "through2": "^2.0.3",
     "typeorm": "^0.2.7",
     "ws": "^6.0.0"
   },
@@ -66,20 +70,22 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/module-alias": "^2.0.0",
-    "@types/node": "^10.5.7",
+    "@types/node": "^10.7.1",
     "@types/object-assign": "^4.0.30",
     "@types/pino": "^4.16.1",
-    "@types/prop-types": "^15.5.4",
+    "@types/prop-types": "^15.5.5",
+    "@types/pump": "^1.0.1",
     "@types/query-string": "^6.1.0",
-    "@types/react": "16.4.8",
+    "@types/react": "16.4.11",
     "@types/react-dom": "16.0.7",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-router-dom": "^4.3.0",
     "@types/react-sortable-hoc": "^0.6.4",
+    "@types/through2": "^2.0.33",
     "@types/webpack-env": "^1.13.6",
-    "@types/ws": "^5.1.2",
+    "@types/ws": "^6.0.0",
     "async": "^2.6.1",
-    "autoprefixer": "^9.1.0",
+    "autoprefixer": "^9.1.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
@@ -87,19 +93,19 @@
     "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.4",
+    "fork-ts-checker-webpack-plugin": "^0.4.9",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
-    "mobx-react": "^5.2.3",
-    "mobx-react-devtools": "^6.0.2",
+    "mobx-react": "^5.2.5",
+    "mobx-react-devtools": "^6.0.3",
     "mobx-react-router": "^4.0.4",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
     "npm-run-all": "^4.1.3",
     "object-assign": "^4.1.1",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^2.1.6",
+    "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
     "promise": "^8.0.1",
     "prop-types": "^15.6.2",
@@ -114,15 +120,15 @@
     "sass-loader": "^7.1.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^4.4.2",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^0.22.1",
+    "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.1",
     "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.6",
-    "url-loader": "^1.0.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
@@ -130,7 +136,7 @@
     "webpack-dev-server": "^3.1.5"
   },
   "resolutions": {
-    "**/@types/react": "16.4.8",
+    "**/@types/react": "16.4.11",
     "**/@types/react-dom": "16.0.7",
     "**/react": "16.4.2",
     "**/react-dom": "16.4.2"
