--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "express-promise-router": "^3.0.3",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
-    "mobx": "^5.0.3",
+    "mobx": "^5.1.0",
     "mobx-utils": "^5.0.1",
     "module-alias": "^2.1.0",
     "moment": "^2.22.2",
-    "mqtt": "^2.18.3",
+    "mqtt": "^2.18.8",
     "pg": "^7.4.3",
-    "pino": "^5.2.0",
+    "pino": "^5.4.0",
     "pump": "^3.0.0",
     "reflect-metadata": "^0.1.12",
     "serializr": "^1.3.0",
@@ -70,13 +70,13 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/module-alias": "^2.0.0",
-    "@types/node": "^10.7.1",
+    "@types/node": "^10.9.4",
     "@types/object-assign": "^4.0.30",
-    "@types/pino": "^4.16.1",
+    "@types/pino": "^5.20.0",
     "@types/prop-types": "^15.5.5",
     "@types/pump": "^1.0.1",
     "@types/query-string": "^6.1.0",
-    "@types/react": "16.4.11",
+    "@types/react": "16.4.13",
     "@types/react-dom": "16.0.7",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-router-dom": "^4.3.0",
@@ -85,23 +85,23 @@
     "@types/webpack-env": "^1.13.6",
     "@types/ws": "^6.0.0",
     "async": "^2.6.1",
-    "autoprefixer": "^9.1.2",
+    "autoprefixer": "^9.1.3",
+    "cache-loader": "^1.2.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "favicons-webpack-plugin": "^0.0.9",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
-    "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "mobx-react": "^5.2.5",
     "mobx-react-devtools": "^6.0.3",
     "mobx-react-router": "^4.0.4",
     "node-sass": "^4.9.3",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "object-assign": "^4.1.1",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -111,31 +111,32 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "16.4.2",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^5.0.2",
     "react-dom": "16.4.2",
-    "react-hot-loader": "^4.3.4",
+    "react-hot-loader": "^4.3.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-sortable-hoc": "^0.8.3",
     "sass-loader": "^7.1.0",
     "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.82.2",
+    "semantic-ui-react": "^0.82.3",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
+    "thread-loader": "^1.2.0",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-consistent-codestyle": "^1.13.3",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.0.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.16.5",
+    "webpack": "^4.17.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dashboard": "^2.0.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.7"
   },
   "resolutions": {
     "**/@types/react": "16.4.11",
