--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "sprinklers3",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "A frontend for mqtt based IoT sprinklers systems",
-  "main": "dist/bin/server.js",
+  "description": "A SPA web app for mqtt based IoT sprinklers systems",
+  "bin": "./bin/sprinklers3",
+  "main": "./bin/sprinklers3",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist ./build ./public",
-    "build:client": "NODE_ENV=production webpack --config ./client/webpack.config.js --env prod",
+    "build:client": "webpack --config ./client/webpack.config.js --env production",
     "build:server": "tsc --build server",
     "build": "run-p build:*",
     "watch:client": "yarn build:client --watch",
     "watch:server": "yarn build:server --watch",
-    "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./client/webpack.config.js --env dev",
-    "start": "NODE_ENV=development node .",
-    "start:pretty": "yarn start | node dist/bin/prettyPrint.js",
-    "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node . | node dist/bin/prettyPrint.js\"",
+    "start:dev-server": "webpack-dev-server --config ./client/webpack.config.js --env development",
+    "start": "node . serve",
+    "start:pretty": "node . serve | node . prettyPrint",
+    "start:nodemon": "nodemon --delay 0.5 --exec \"node . serve | node . prettyPrint\"",
     "start:watch": "run-p watch:server start:nodemon",
     "start:dev": "run-p start:dev-server start:watch",
     "lint:client": "tslint --project client --force --format verbose",
@@ -23,6 +24,7 @@
     "lint": "run-p lint:*"
   },
   "files": [
+    "paths.js",
     "dist",
     "public"
   ],
@@ -36,11 +38,19 @@
     "url": "https://github.com/amikhalev/sprinklers3/issues"
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
+  "oclif": {
+    "title": "sprinklers3",
+    "commands": "./dist/commands"
+  },
   "dependencies": {
+    "@oclif/command": "^1.5.0",
+    "@oclif/config": "^1.7.4",
+    "@oclif/plugin-help": "^2.1.1",
     "@types/split2": "^2.1.6",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "cli-ux": "^4.8.1",
     "express": "^4.16.3",
     "express-pino-logger": "^4.0.0",
     "express-promise-router": "^3.0.3",
@@ -128,7 +138,7 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-consistent-codestyle": "^1.13.3",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.0 || >=3.1.0-dev.20180901",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
