--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-consistent-codestyle": "^1.13.3",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.0 || >=3.1.0-dev.20180901",
+    "typescript": "^3.0.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
